Replace platform-pool fiction with ExecutorService primitives
The previous Virtual-vs-Platform level emulated pool starvation by
giving Thread.ofPlatform() chefs a global slot pool. That doesn't
match real Java — Thread.ofPlatform().start(runnable) spawns a fresh
OS thread, no pool. The starvation model only applies to bounded
ExecutorService pools.

This change makes the simulator honest about it:

- New SharedType.FixedExecutorType(N) and SharedType.VirtualExecutorType
  rendering as Executors.newFixedThreadPool(N) and
  Executors.newVirtualThreadPerTaskExecutor() respectively
- ChefProgram gains an executorName field (non-null when the chef was
  spawned via pool.submit(() -> { ... }))
- Parser dispatches between Thread.ofX().start(...) and
  pool.submit(...) at the top level. Pool name is validated against
  declarations to be an executor type. Auto-named chefs follow
  poolName-task-N.
- Simulator tracks per-executor pool size and active slot count.
  A chef bound to an executor acquires a slot before its first
  instruction; releases on completion. Virtual executors have
  Integer.MAX_VALUE capacity (effectively unbounded).
- Removed Simulator.setPlatformPoolSize and Level.platformPoolSize —
  they were the misrepresentation.
- AbstractLevel imports java.util.concurrent.ExecutorService and
  Executors when any executor type is declared.

VirtualVsPlatformLevel reframed: declares both fixedPool (size 1)
and virtualPool. Starter submits both tasks to fixedPool — the
producer holds the slot, parks on full, consumer can never start —
classic pool deadlock. User switches submits to virtualPool (or at
least the consumer) to fix.

The .java output of the level now compiles cleanly on Java 21+ and
exhibits the same starvation in real life. 75 tests pass.