@@ -18,21 +18,26 @@ public final class VirtualVsPlatformLevel extends AbstractLevel {
             .passingCondition("Total received equals 15")
             .declare("queue", new SharedType.QueueType(2))
             .declare("totalReceived", new SharedType.IntType(0))
+            .declare("fixedPool", new SharedType.FixedExecutorType(1))
+            .declare("virtualPool", new SharedType.VirtualExecutorType())
             .intro("""
-                Same producer/consumer scenario, but the kitchen has only one platform
-                thread slot to share between them. The starter uses Thread.ofPlatform()
-                for both — the producer takes the slot, fills the queue, and blocks. The
-                consumer never gets a slot. Classic platform-pool deadlock. Java 21+
-                gives you a way out.
+                Producer/consumer cooperation, but the kitchen runs tasks through a
+                fixed thread pool of size 1. fixedPool only has one slot — the
+                producer takes it, fills the queue, then parks waiting for room.
+                The consumer can never start because the slot is occupied. Whole
+                kitchen freezes.
+
+                Java 21 ships another executor — virtualPool, backed by virtual
+                threads — that doesn't bind tasks to OS threads. Submit there
+                instead.
                 """)
             .starterCode("""
-                // The platform thread pool is size 1. Both chefs start as platform threads.
-                // Producer takes the slot, fills the queue, then blocks on full. Consumer
-                // can't start (no slot). The whole kitchen freezes.
+                // fixedPool: Executors.newFixedThreadPool(1) — one slot.
+                // virtualPool: Executors.newVirtualThreadPerTaskExecutor() — unbounded.
                 //
-                // Hint: Java 21 has thread bodies that don't compete for OS threads.
+                // Run as-is and watch fixedPool starve. Then move the submits.
 
-                Thread producer = Thread.ofPlatform().start(() -> {
+                fixedPool.submit(() -> {
                     queue.put(1);
                     queue.put(2);
                     queue.put(3);
@@ -40,7 +45,7 @@ public final class VirtualVsPlatformLevel extends AbstractLevel {
                     queue.put(5);
                 });
 
-                Thread consumer = Thread.ofPlatform().start(() -> {
+                fixedPool.submit(() -> {
                     int x = queue.take();
                     totalReceived = totalReceived + x;
                     x = queue.take();
@@ -53,16 +58,11 @@ public final class VirtualVsPlatformLevel extends AbstractLevel {
                     totalReceived = totalReceived + x;
                 });
                 """)
-            .hint("Platform threads occupy a fixed pool slot until they're done. Pool=1 means only one chef can ever be running.")
-            .hint("When the producer parks waiting for queue space, it's still holding the slot. The consumer can't even start to drain the queue.")
-            .hint("Switch Thread.ofPlatform().start(...) to Thread.ofVirtual().start(...). Virtual threads park without holding an OS thread.")
+            .hint("A fixed pool task holds its slot for the entire body — even when it's parked waiting on a queue. Pool=1 means no concurrent submits.")
+            .hint("Switch fixedPool.submit(...) to virtualPool.submit(...) — at least for one of the two tasks. Virtual threads park without holding an OS thread.")
+            .hint("In production Java this is the actual fix: replace `Executors.newFixedThreadPool(N)` with `Executors.newVirtualThreadPerTaskExecutor()` for I/O-heavy work.")
             .resultPrintln("\"Total received: \" + totalReceived")
             .build());
-    }
-
-    @Override
-    public int platformPoolSize() {
-        return 1;
     }
 
     @Override
@@ -72,7 +72,7 @@ public final class VirtualVsPlatformLevel extends AbstractLevel {
         }
         int total = sim.finalGlobals().getOrDefault(TOTAL, 0);
         if (total == EXPECTED_SUM) {
-            return pass("Total received: " + total + ". Both chefs ran without competing for an OS thread.", sim);
+            return pass("Total received: " + total + ". Tasks ran without competing for an OS thread.", sim);
         }
         return fail("Total received: " + total + ", expected " + EXPECTED_SUM + ".", sim);
     }
